test/func.ruse
// fail

func p(a int a) int { // error
    a
}

func f(a int) intx {
    a
}

func f() int { // error
}

func main() int {
    f
    f() // error
    f(1, 1) // error
}
